Bug 1341521 - Remove the retaining buffer machanism when setting the same canvas dimension. r=nical

--HG--
extra : rebase_source : 519ae1558bb0a771474508ebfd1f44ea38262015